# learning-os

./: .gitignore  AGENTS.md  PRODUCT.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.superpowers/sdd/: llm-task-5-report.md  task-1-report.md  task-2-report.md  task-3-report.md  task-4-report.md  task-5-report.md
apps/console/: index.html  package.json  tsconfig.json  vite.config.ts
apps/e2e/: package.json  playwright.config.ts
apps/generator/: .env.example  learning-os-generator.spec  pyproject.toml
apps/generator/scripts/: build-macos.sh
apps/generator/src/learning_os_generator/: __init__.py  __main__.py
apps/generator/src/learning_os_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/generator/src/learning_os_generator/api/: __init__.py  app.py
apps/generator/src/learning_os_generator/domain/: __init__.py  generation.py
apps/generator/src/learning_os_generator/infrastructure/: __init__.py  deepseek.py
apps/generator/src/learning_os_generator/schemas/: __init__.py  generation.py
apps/generator/tests/: test_app.py  test_deepseek.py
apps/server/: package.json  tsconfig.json  tsconfig.prod.json
apps/shell/: package.json  tsconfig.json  tsconfig.preload.json
doc/: 2026-07-14-import-task-notes-design.md  2026-07-15-learning-workbench-ui-design.md  2026-07-15-llm-settings-design.md  deepseek-llm-integration-design.md  deepseek-llm-integration-plan.md  macos-packaging.md
doc/architecture/: 2026-07-03-monorepo-structure.md
doc/decisions/: 2026-07-03-structure-normalization.md
(+107 files in other folders)
