[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learning-os-generator"
version = "0.0.1"
description = "Learning OS candidate generation service"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn==0.35.0",
  "pydantic==2.11.7",
  "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
  "pyinstaller==6.15.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
